--- a/src/components/funcComponents/TicketList.css
+++ b/src/components/funcComponents/TicketList.css
@@ -4,7 +4,8 @@
     border-radius: 7px;
     border: 2px solid black;
     margin-left: 10px;
-    max-width: 470px;
+    /* min-height: 400px; */
+    min-width: 400px;
 }
 
 .ticketList-title {
