--- a/src/components/funcComponents/Ticket.css
+++ b/src/components/funcComponents/Ticket.css
@@ -3,5 +3,7 @@
     margin-top: 10px;
     border-radius: 7px;
    border: 2px solid red;
-  
+}
+.ticket-btn-add-ticket {
+    margin-top: 10px;
 }
