--- a/src/screens/home/workspaces/Workspaces.css
+++ b/src/screens/home/workspaces/Workspaces.css
@@ -1,21 +1,23 @@
-.container-workspaces{
-    text-align: left;
-    display: flex;
-    background-color: rgba(141, 30, 30,0);
-    width: 1000px;
-    min-height: 480px;
-    margin: 15px auto;
+.container-workspaces {
+	align-items: center;
+	background-color: rgba(141, 30, 30, 0);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 15px auto;
+	min-height: 480px;
+	text-align: left;
+	width: 1000px;
 }
-.aside-left{
-   flex-basis: 250px;
+.aside-left {
+	flex-basis: 250px;
 }
-.aside-right{
-    flex: 1;
+.aside-right {
+	flex: 1;
 }
-.branch-aside-workspace{
-    display: flex;
-    padding: 0 5px;
-    justify-content: space-between;
-    background-color: turquoise;
+.branch-aside-workspace {
+	display: flex;
+	padding: 0 5px;
+	justify-content: space-between;
+	background-color: turquoise;
 }
-
