--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -1,20 +1,21 @@
 .home-container{
-    display: flex;
-    flex-direction: column;
+    position: relative;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .navbar{
+    top: 15px;
+    position: absolute;
     padding: 15px;
     display: flex;
     color: #fff;
     font-weight: 700;
     justify-content: space-between;
     align-items: center;
-    background-color: #6675df;
-    position: relative;
+    background-color: rgba(85, 104, 212, .8);
     top: 0; left: 0; right: 0;
     width: 100%;
+    z-index: 1005;
 }
 
 .navbar p {
