--- a/src/components/funcComponents/TicketList.css
+++ b/src/components/funcComponents/TicketList.css
@@ -1,13 +1,14 @@
 .ticketList-container{
+    margin: 7.5px;
     background-color: #ebecf0;
     padding: 10px;
     border-radius: 7px;
     border: 2px solid black;
-    
-    /* min-height: 400px; */
     min-width: 400px;
 }
 
 .ticketList-title {
-    font-weight: 700;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
 }
