--- a/src/screens/home/Board.css
+++ b/src/screens/home/Board.css
@@ -1,5 +1,6 @@
 .board-wrapper {
     height: 100vh;
+    padding-top: 60px;
     /* width: 100vw; */
     overflow-x: scroll;
     border: 2px solid green;
@@ -17,5 +18,5 @@
 .board-btn-add-list {
    min-width: 120px;
    height: 48px;
-  
+
 }
