--- a/src/components/funcComponents/workspaces/Workspace.css
+++ b/src/components/funcComponents/workspaces/Workspace.css
@@ -2,3 +2,14 @@
 	display: flex;
 	flex-wrap: wrap;
 }
+.title-workspace{
+	height: 120px;
+}
+.workspace-delete svg{
+	height: 25px;
+	width: 25px;
+}
+.workspace-delete svg path{
+
+	fill: rgb(165, 37, 37);
+}
