--- a/src/components/funcComponents/workspaces/BoardPreview.css
+++ b/src/components/funcComponents/workspaces/BoardPreview.css
@@ -1,47 +1,19 @@
-.add-new-board {
-	align-items: center;
-	background-color: rgb(177, 177, 174);
+.board-preview {
+	align-items: flex-start;
+	background-color: rgba(85, 104, 212, 0.95);
+	border-radius: 15px;
+	box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.411);
 	cursor: pointer;
 	display: flex;
-	justify-content: center;
-	margin: 4px;
-	position: relative;
-	height: 50px;
-	width: 200px;
-	border-radius: 15px;
-}
-
-.add-new-board::after {
-	border-radius: 15px;
-	background-color: rgba(255, 255, 255, 0);
-	content: "";
-	height: 100%;
-	left: 0;
-	pointer-events: none;
-	position: absolute;
-	top: 0;
-	transition: background-color ease 0.3s;
-	width: 100%;
-}
-
-.add-new-board:hover::after {
-	background-color: rgba(255, 255, 255, 0.487);
-}
-
-.board-preview{
-	align-items: center;
-	background-color: rgba(85, 104, 212, .95);;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	margin: 4px;
+	justify-content: flex-start;
+	margin: 4px 0;
 	position: relative;
 	height: 200px;
+	transition: box-shadow ease 0.3s;
 	width: 200px;
-	border-radius: 15px;
 }
 
-.board-preview::after{
+.board-preview::after {
 	border-radius: 15px;
 	background-color: rgba(255, 255, 255, 0);
 	content: "";
@@ -52,8 +24,19 @@
 	top: 0;
 	transition: background-color ease 0.3s;
 	width: 100%;
+}
+
+.board-preview:hover {
+	box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.411);
 }
 
 .board-preview:hover::after {
 	background-color: rgba(255, 255, 255, 0.487);
+}
+
+.board-preview p {
+	padding: 10px;
+	text-justify: newspaper;
+	text-align: start;
+	font-weight: 600;
 }
