--- a/src/components/funcComponents/workspaces/NewBoard.css
+++ b/src/components/funcComponents/workspaces/NewBoard.css
@@ -1,3 +1,33 @@
+.add-new-board {
+	align-items: center;
+	background-color: rgb(177, 177, 174);
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	margin: 4px 0;
+	position: relative;
+	height: 50px;
+	width: 200px;
+	border-radius: 15px;
+}
+
+.add-new-board::after {
+	border-radius: 15px;
+	background-color: rgba(255, 255, 255, 0);
+	content: "";
+	height: 100%;
+	left: 0;
+	pointer-events: none;
+	position: absolute;
+	top: 0;
+	transition: background-color ease 0.3s;
+	width: 100%;
+}
+
+.add-new-board:hover::after {
+	background-color: rgba(255, 255, 255, 0.487);
+}
+
 .board-preview-modal {
 	background-color: rgb(221, 207, 182);
 	border-radius: 20px;
