--- a/src/components/funcComponents/board/NewTicketModal.css
+++ b/src/components/funcComponents/board/NewTicketModal.css
@@ -1,20 +1,43 @@
-.newTicketModal-container{
+.newTicketModal-container {
     background-color: whitesmoke;
     height: 400px;
-    width: 400px;
+    width: 50vw;
     position: relative;
     border-radius: 10px;
     padding: 10px;
 }
 
-.newTicketModal-btn {
-    width: 100px;
+.newTicketModal-container label,
+.newTicketModal-ticketFlag label,
+.newTicketModal-moveToOtherList label {
+    display: block;
 }
 
-.newTicketModal-buttons{
+.newTicketModal-container input {
+    width: 150px;
+}
+
+.newTicketModal-container input,
+.newTicketModal-container select {
+    width: 150px;
+    padding: 10px;
+    margin: 10px 0 10px 0;
+}
+
+.newTicketModal-buttons {
     position: absolute;
     bottom: 0;
     width: 100%;
     display: flex;
-   
+
+}
+
+.newTicketModal-buttons .newTicketModal-btn {
+    width: 100px;
+}
+
+@media (max-width: 375px) {
+    .newTicketModal-container{
+        width: 70vw;
+    }
 }
