--- a/src/components/funcComponents/board/NewTicketModal.css
+++ b/src/components/funcComponents/board/NewTicketModal.css
@@ -1,7 +1,8 @@
 .newTicketModal-container {
     background-color: whitesmoke;
+   
     height: 400px;
-    width: 50vw;
+    width: 60vw;
     position: relative;
     border-radius: 10px;
     padding: 10px;
@@ -26,8 +27,8 @@
 
 .newTicketModal-buttons {
     position: absolute;
-    bottom: 0;
-    width: 100%;
+    bottom: 5px;
+    gap: 5px;
     display: flex;
 
 }
@@ -36,8 +37,8 @@
     width: 100px;
 }
 
-@media (max-width: 375px) {
-    .newTicketModal-container{
-        width: 70vw;
+@media (min-width: 600px) {
+    .NewTicketListModal-container{
+        width: 40vw;
     }
 }
