ticket modals styling

--- a/src/components/funcComponents/Ticket.css
+++ b/src/components/funcComponents/Ticket.css
@@ -6,7 +6,11 @@
     cursor: pointer;
     margin-top: 10px;
     border-radius: 7px;
-   border: 2px solid red;
+}
+
+.ticketTitle {
+    max-width: 120px;
+    word-break: break-word;
 }
 
 .ticketBtn {
