--- a/src/screens/home/Board.css
+++ b/src/screens/home/Board.css
@@ -4,10 +4,18 @@
 	overflow: hidden;
 	padding-top: 60px;
 }
-.board-title {
+.board-header {
 	font-size: 22px;
 	padding: 10px 10px;
 	text-align: left;
+}
+
+.board-header h3 {
+	background-color: rgba(78, 78, 78, 0.397);
+	color: white;
+	padding: 3px 8px;
+	margin: 0 0 10px 0;
+	width: fit-content;
 }
 
 .board-button-list {
