--- a/src/screens/home/Board.css
+++ b/src/screens/home/Board.css
@@ -5,16 +5,23 @@
 	padding-top: 60px;
 }
 .board-header {
-	font-size: 22px;
+	align-items: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
 	padding: 10px 10px;
-	text-align: left;
 }
 
-.board-header h3 {
+.board-header-top {
+}
+
+.board-header-top h3 {
 	background-color: rgba(78, 78, 78, 0.397);
 	color: white;
-	padding: 3px 8px;
+	font-size: 22px;
 	margin: 0 0 10px 0;
+	padding: 3px 8px;
+	text-align: left;
 	width: fit-content;
 }
 
