--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -1,7 +1,8 @@
 .home-container {
-	position: relative;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	height: 100vh;
+	position: relative;
 }
 
 .navbar {
